# netpulse

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmessage  .readthedocs.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CHANGELOG_EN.md  CONTRIBUTING.md  LICENSE  Makefile  README-zh.md  README.md  docker-compose.dev.yaml  docker-compose.yaml  gunicorn.conf.py  llms.txt  mkdocs.yml  pyproject.toml  repomix.config.json  worker.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  e2e-containerlab.yml  ruff.yml  test-containerlab.yml
ai-docs/: API_REFERENCE.md  openapi.json  repomix-output.xml
config/: config.yaml  log-config.yaml
deploy/: README.md
deploy/charts/netpulse/: Chart.yaml  values.yaml
deploy/k8s/: 01-netpulse-storage.yaml  01-redis-operator.yaml  01-redis.yaml  02-netpulse.yaml  02-redis-operator.yaml  03-redis-cluster.yaml  04-vault.yaml  05-vault-init.yaml  05-vault.yaml  06-netpulse-core.yaml  07-ingress.yaml  08-nodeport.yaml  09-mongodb.yaml  README.md  calico-ippool-v2.yaml
deploy/k8s/scripts/: distribute_images.sh  k8s_setup_secrets.sh  vault_auto_init.sh
docker/: archiver_worker.dockerfile  controller.dockerfile  fifo_worker.dockerfile  node_worker.dockerfile  ssh_config
docs/en/: index.md
docs/en/advanced/: batch-operations.md  performance-tuning.md  templates.md  webhooks.md
docs/en/api/: api-best-practices.md  api-examples.md  api-overview.md  credential-api.md  device-api.md  job-api.md  template-api.md
docs/en/architecture/: architecture-overview.md  architecture.md  driver-system.md  drivers.md  long-connection.md  overview.md  plugin-system.md  plugins.md  scheduler-system.md  schedulers.md  template-system.md  templates.md  webhook-system.md  webhooks.md
docs/en/development/: index.md
docs/en/drivers/: index.md  napalm.md  netmiko.md  paramiko.md  pyeapi.md
docs/en/getting-started/: basic-concepts.md  deployment-guide.md  deployment.md  first-steps.md  postman-guide.md  quick-start.md
docs/en/guides/: api.md  cli.md  configuration.md  postman-collection.md  sdk-guide.md
docs/en/reference/: best-practices.md  configuration-guide.md  configuration.md  credential-guide.md  development-guide.md  environment-variables.md  error-codes.md  glossary.md  performance-tuning.md  troubleshooting.md
docs/en/troubleshooting/: log-analysis.md
docs/overrides/: main.html
docs/stylesheets/: code-pro.css  extra.css  menu-enhanced.css  minimal.css
docs/zh/: index.md
docs/zh/advanced/: batch-operations.md  performance-tuning.md  templates.md  webhooks.md
docs/zh/api/: api-best-practices.md  api-examples.md  api-overview.md  credential-api.md  device-api.md  job-api.md  template-api.md
docs/zh/architecture/: architecture-overview.md  architecture.md  driver-system.md  drivers.md  long-connection.md  overview.md  plugin-system.md  plugins.md  scheduler-system.md  schedulers.md  template-system.md  templates.md  webhook-system.md  webhooks.md
docs/zh/assets/css/: custom.css
docs/zh/development/: index.md
docs/zh/drivers/: index.md  napalm.md  netmiko.md  paramiko.md  pyeapi.md
docs/zh/getting-started/: basic-concepts.md  deployment-guide.md  deployment.md  first-steps.md  postman-guide.md  quick-start.md
docs/zh/guides/: api.md  cli.md  configuration.md  postman-collection.md  sdk-guide.md
docs/zh/reference/: best-practices.md  configuration-guide.md  configuration.md  credential-guide.md  development-guide.md  environment-variables.md  error-codes.md  glossary.md  performance-tuning.md  troubleshooting.md
docs/zh/troubleshooting/: log-analysis.md
examples/paramiko-driver/: 00_quick_test.py  01_test_connection.py  02_execute_commands_password.py  03_execute_commands_keyfile.py  04_execute_commands_pkey.py  05_config_sudo.py  06_batch_commands.py  07_proxy_connection.py  08_file_upload.py  09_file_download.py  common.py.example
k8s/: 00-secrets.yaml  01-redis.yaml  02-netpulse.yaml  03-ingress.yaml  04-nodeport.yaml  05-vault-init-job.yaml  05-vault.yaml
netpulse/: __init__.py  controller.py
netpulse-client/: pyproject.toml
netpulse-client/examples/: sdk_test.py
netpulse-client/netpulse_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py
netpulse/cli/: main.py
netpulse/cli/csv/: devices.csv
netpulse/models/: common.py  credential.py  driver.py  request.py  response.py
netpulse/plugins/: __init__.py
netpulse/routes/: __init__.py  credential.py  detached_task.py  device.py  manage.py  pull.py  push.py  storage.py  template.py
netpulse/server/: __init__.py  common.py
netpulse/services/: audit.py  credential_resolver.py  manager.py  rediz.py  rpc.py  supervisor.py  vault_manager.py
netpulse/utils/: __init__.py  config.py  exceptions.py  logger.py
netpulse/worker/: archiver.py  common.py  fifo.py  node.py  pinned.py
postman/: NetPulse.postman_collection.json
redis/: redis.conf
scripts/: check_env.sh  docker_auto_deploy.sh  docker_deploy.sh  export_openapi.py  generate_redis_certs.sh  k8s_setup_secrets.sh  setup_env.sh  setup_git_template.sh  webhook_test_server.py
tests/: README.md  __init__.py  conftest.py  verify_new_detach.py
tests/api/: test_routes.py
tests/clab/: README.md  e2e.clab.yaml
tests/data/: config.e2e.yaml  config.test.yaml
tests/e2e/: __init__.py  conftest.py  settings.py  test_api.py  test_driver_netmiko.py  test_driver_paramiko.py
tests/unit/: conftest.py  test_api_integration.py  test_audit.py  test_credentials.py  test_driver_netmiko.py  test_driver_paramiko.py  test_driver_paramiko_advanced.py  test_driver_paramiko_detach.py  test_driver_paramiko_detached_advanced.py  test_driver_paramiko_jinja2.py  test_driver_paramiko_proxy.py  test_infra.py  test_logger.py  test_manager.py  test_models.py  test_plugin_loader.py  test_routes.py  test_routes_storage.py  test_rpc.py  test_schedulers.py  test_security.py  test_template.py  test_template_plugins.py  test_template_source.py  test_webhooks.py  test_worker.py
tools/webhook/: README.md  webhook_server.py
vault/: config.hcl
vault/config/: vault.hcl
(+42 files in other folders)
