[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netpulse"
version = "0.4.1"
description = "API Server for Network Devices"
authors = [
    { name = "Yongkun Li", email = "44155313+Nativu5@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["network", "api", "netmiko", "napalm", "automation", "fastapi"]

dependencies = [
    # Core
    "colorlog~=6.9.0",
    "filelock~=3.17.0",
    "pydantic~=2.10.6",
    "pydantic-settings[yaml]~=2.9.1",
    "requests~=2.32.3",
    "hvac~=2.3.0",

    # Redis
    "redis~=5.2.1",
    "rq~=2.3.1",

    # Drivers
    "napalm~=5.1.0",
    "ncclient~=0.6.15",
    "netmiko~=4.6.0",
    "paramiko~=4.0.0",
    "puresnmp~=2.0.1",
    "pyeapi~=1.0.4",

    # Templates
    "Jinja2~=3.1.5",
    "jinja2schema~=0.1.4",
    "textfsm~=1.1.3",
    "ntc_templates~=7.7.0",
    "ttp~=0.10.0",
    "ttp-templates~=0.3.7",
]

[project.optional-dependencies]
api = [
    "fastapi~=0.115.12",
    "gunicorn~=23.0.0",
    "uvicorn~=0.34.0",
    "uvloop~=0.21.0; sys_platform != 'win32'",
    "python-multipart~=0.0.12",
]
tool = ["pandas~=2.2", "openpyxl~=3.1", "rich~=13.0"]
dev = [
    "ruff>=0.11.0",
    "mkdocs-material~=9.6.0",
    "mkdocs-static-i18n~=1.3.0",
    "pytest~=8.3.0",
    "pytest-cov~=6.0.0",
    "fakeredis~=2.23.3",
    "httpx~=0.27.0",
]
test = ["pytest~=8.3.0", "pytest-cov~=6.0.0", "fakeredis~=2.23.3", "httpx~=0.27.0"]

[project.scripts]
netpulse-cli = "netpulse.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/scitix/netpulse"
"Documentation" = "https://netpulse.readthedocs.io"
"Repository" = "https://github.com/scitix/netpulse"
"Bug Tracker" = "https://github.com/scitix/netpulse/issues"
"Changelog" = "https://github.com/scitix/netpulse/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["netpulse"]

[tool.setuptools.exclude-package-data]
"*" = [
    "__pycache__",
    "*.py[co]",
    "*.lock",
    "*.dockerfile",
    "*.sh",
    "*.postman_collection.json",
    "*.log",
    "*.bak",
]

[tool.ruff]
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "W", "RUF", "I"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end tests that require ContainerLab devices",
    "api: API-level tests without external deps",
]
filterwarnings = [
    "ignore::pyparsing.PyparsingDeprecationWarning:jnpr.junos.*",
    "ignore::DeprecationWarning:jnpr.junos.*",
]
